--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </header>
     <main>
         <section data-index="0" class="home">
-            <img src="me.png"/>
+            <img class="profile-pic" src="me.png"/>
+            <img class="github-icon" src="github2.png"/>
+            <img class="linkedin-icon" src="linkedin.png"/>
             <p></p>
         </section>
         <section data-index="2" class="project">
