--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section data-index="0" class="home">
             <img class="profile-pic" src="me.png"/>
-            <img class="github-icon" src="github2.png"/>
+            <img class="github-icon" src="github.png"/>
             <img class="linkedin-icon" src="linkedin.png"/>
             <p></p>
         </section>
