--- a/index.html
+++ b/index.html
@@ -18,15 +18,58 @@
                 <li><a data-page="resume" href="#"></list1>Resume</a></li>
                 <li><a data-page="contact" href="#"></list1>Contact</a></li>
                 <div class="jumper"></div>
+                <!-- www.linkedin.com/in/msapkota
+                GitHub: www.github.com/sapkotam
+                mks.skt@gmail.com -->
             </ul>
         </nav>
     </header>
     <main>
         <section data-index="0" class="home">
-            <img class="profile-pic" src="me.png"/>
-            <img class="github-icon" src="github.png"/>
-            <img class="linkedin-icon" src="linkedin.png"/>
-            <p></p>
+                <div class="col-md-6 no-gutters">
+                    <div class="leftside">
+                        <img class="profile-pic" src="me.png" alt="profile-pic"/>
+            
+                    </div>
+                </div>
+
+                <div class="col-md-6 no-gutters">
+                    <div class="rightside">
+                        <div class="intro">
+                            <p> <br> <br> <br> <br> <p> <br> <br> <br>
+                                Hello, <br> 
+                                I am Mahendra Sapkota, computer science student in University of Massachusetts <br> looking for software engineering internship. </p>
+                        </div>
+                        <br>
+                        <div class="icones">
+                            <ul>
+                                <li>
+                                    <a href="www.github.com/sapkotam" target="_blank">
+                                        <img class="github-icon" src="github.png" alt="github icon"/> <br> GitHub
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="www.linkedin.com/in/msapkota" target="_blank" alt="linkedin">
+                                        <img class="linkedin-icon" src="linkedin.png"/>  <br> Linkedin
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="mailto:mks.skt@gmail.com">
+                                        <img class="email-icon" src="email.png" alt="email"/>  <br> Email
+                                    </a>
+                                </li> 
+                                <li>
+                                    <a href="resume.pdf"  target="_blank">
+                                        <img class="pdf-icon" src="pdf.png" alt="resume"/>  <br> Resume
+                                    </a>
+                                </li> 
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
+
         </section>
         <section data-index="2" class="project">
             <h2>Project</h2>
@@ -41,3 +84,39 @@
     <script src="./app.js"></script>
 </body>
 </html>
+
+<!-- 
+            <section data-index="0" class="home">
+            <div class="row">
+                <div class="column">
+                        <img class="profile-pic" src="me.png" alt="profile-pic"/>
+                </div>
+                <div class="column">
+                    <p>My name is mahendra sapkota and i am going to umass amherst </p>
+                    <br>    
+                    <ul>
+                        <li>
+                            <a href="www.github.com/sapkotam" target="_blank">
+                                <img class="github-icon" src="github.png" alt="github icon"/> 
+                            </a>
+                        </li>
+                        <li>
+                            <a href="www.linkedin.com/in/msapkota" target="_blank" alt="linkedin icon">
+                                <img class="linkedin-icon" src="linkedin.png"/> 
+                            </a>
+                        </li>
+                        <li>
+                            <a href="resume.pdf">
+                                <img class="pdf-icon" src="pdf.png" alt="resume"/> 
+                            </a>
+                        </li> 
+                        <li>
+                            <a href="mailto:mks.skt@gmail.com">
+                                <img class="email-icon" src="email.png" alt="email"/> 
+                            </a>
+                        </li> 
+                    </ul>
+                </div>
+            </div>
+        </section>
+ -->
