--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div class="rightside">
                         <div class="intro">
                             <p> <br> <br> <br> <br> <p> <br> <br> <br>
-                                Hello, <br> 
-                                I am Mahendra Sapkota, computer science student in University of Massachusetts <br> looking for software engineering internship. </p>
+                                <h3 class="hello">Hello</h3> 
+                                <p> I am Mahendra Sapkota, computer science student in University of Massachusetts <br> looking for software engineering internship. </p>
                         </div>
                         <br>
                         <div class="icones">
