reduced to single page

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header>
-        <nav>
-            <h1>Mahendra Sapkota</h1>
-            <ul class="menu">
-                <li><a data-page="home" href="#"></list1>Home</a></li>
-                <li><a data-page="project" href="#"></list1>Project</a></li>
+        <!-- <nav>
+            <h1>Mahendra Sapkota</h1> -->
+            <!-- <ul class="menu">
+                <li><a data-page="home" href="#"></list1>Home</a></li> -->
+                <!-- <li><a data-page="project" href="#"></list1>Project</a></li>
                 <li><a data-page="resume" href="#"></list1>Resume</a></li>
                 <li><a data-page="contact" href="#"></list1>Contact</a></li>
-                <div class="jumper"></div>
+                <div class="jumper"></div> -->
                 <!-- www.linkedin.com/in/msapkota
                 GitHub: www.github.com/sapkotam
                 mks.skt@gmail.com -->
-            </ul>
-        </nav>
+            <!-- </ul> -->
+        <!-- </nav> -->
     </header>
     <main>
         <section data-index="0" class="home">
@@ -44,12 +44,12 @@
                         <div class="icones">
                             <ul>
                                 <li>
-                                    <a href="www.github.com/sapkotam" target="_blank">
+                                    <a href="http://github.com/Sapkotam" target="_blank">
                                         <img class="github-icon" src="github.png" alt="github icon"/> <br> GitHub
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="www.linkedin.com/in/msapkota" target="_blank" alt="linkedin">
+                                    <a href="http://www.linkedin.com/in/msapkota/" target="_blank" alt="linkedin">
                                         <img class="linkedin-icon" src="linkedin.png"/>  <br> Linkedin
                                     </a>
                                 </li>
@@ -71,7 +71,7 @@
 
 
         </section>
-        <section data-index="2" class="project">
+        <!-- <section data-index="2" class="project">
             <h2>Project</h2>
         </section>
         <section data-index="1" class="resume">
@@ -79,7 +79,7 @@
         </section>
         <section data-index="3" class="contact">
             <h2>Contact</h2>
-        </section>
+        </section> -->
     </main>
     <script src="./app.js"></script>
 </body>
