--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div class="col-md-6 no-gutters">
                     <div class="rightside">
                         <div class="intro">
-                            <p> <br> <br> <br> <br> <p> <br> <br> <br>
-                                <h3 class="hello">Hello</h3> 
-                                <p> I am Mahendra Sapkota, computer science student in University of Massachusetts <br> looking for software engineering internship. </p>
+                            <p> <br> <br> <br> <br> <p> <br> <br>
+                                <h3 class="hello">Hello</h3> <br>
+                                <p> I am Mahendra Sapkota, currently a senior majoring in computer science at the University of Massachusetts Amherst. I am looking for software engineering internship where I can use my knowledge, as well as grow with it. Please feel free to contact me for any opportunity. </p>
                         </div>
                         <br>
                         <div class="icones">
@@ -68,7 +68,11 @@
 
                     </div>
                 </div>
+                <div class="col-md-6 no-gutters">
+                    <div class="far-rightside">
 
+                    </div>
+                </div>
 
         </section>
         <!-- <section data-index="2" class="project">
