--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="rightside">
                         <div class="intro">
                             <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-                                <h2 class="hello">Hello</h2> <br>
+                                <h2 class="hello">Hello</h2> <br> <br>
                                 <p> I am Mahendra Sapkota, currently a senior majoring in computer science at the University of Massachusetts Amherst. I am looking for software engineering internship where I can use my knowledge, as well as grow with it. Please feel free to contact me for any opportunity. </p>
 
                             <br> <br>
