html doc modified

--- a/index.html
+++ b/index.html
@@ -125,39 +125,4 @@
         </section>
  -->
 
-
- <!-- 
-            <section data-index="0" class="home">
-            <div class="row">
-                <div class="column">
-                        <img class="profile-pic" src="me.png" alt="profile-pic"/>
-                </div>
-                <div class="column">
-                    <p>My name is mahendra sapkota and i am going to umass amherst </p>
-                    <br>    
-                    <ul>
-                        <li>
-                            <a href="www.github.com/sapkotam" target="_blank">
-                                <img class="github-icon" src="github.png" alt="github icon"/> 
-                            </a>
-                        </li>
-                        <li>
-                            <a href="www.linkedin.com/in/msapkota" target="_blank" alt="linkedin icon">
-                                <img class="linkedin-icon" src="linkedin.png"/> 
-                            </a>
-                        </li>
-                        <li>
-                            <a href="resume.pdf">
-                                <img class="pdf-icon" src="pdf.png" alt="resume"/> 
-                            </a>
-                        </li> 
-                        <li>
-                            <a href="mailto:mks.skt@gmail.com">
-                                <img class="email-icon" src="email.png" alt="email"/> 
-                            </a>
-                        </li> 
-                    </ul>
-                </div>
-            </div>
-        </section>
- -->
+<!-- end -->
